[tool.poetry]
name = "rpc-helper"
version = "0.1.0"
description = "An asynchronous Python helper library for interacting with Ethereum RPC nodes, featuring retry logic and multi-node support."
authors = ["Seth <seth@powerloom.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
web3 = "^6.17.1"
tenacity = "^9.1.2"
httpx = "^0.27.1"
loguru = "^0.7.3"
pydantic = "^2.11.3"
certifi = "^2025.4.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
    "contract: Tests involving contract calls",
    "batch: Tests for batch operations",
    "edge_cases: Tests for edge cases and error handling",
    "retry: Tests for retry logic",
    "rate_limit: Tests for rate limiting functionality"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --disable-warnings --cov=rpc_helper --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
